library_management_system/library_management_system/src/main/java/com/example/library_management_system/Error/exceptions/RecordNotFoundException.java
package com.example.library_management_system.Error.exceptions;

public class RecordNotFoundException extends RuntimeException{

    public RecordNotFoundException() {
    }

    public RecordNotFoundException(String message) {
        super(message);
    }
}
